// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: FormProjectFolder > Project folder setup > disable mode > should not show form fields 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="true" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > on save: disabled project folder > should set status "Inactive" 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="true" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <!--v-if-->
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-status">
        <div data-v-67bc9f59="" class="project-folder-status-value"><b data-v-67bc9f59="">Automatically managed folders:</b> Inactive</div>
        <div data-v-67bc9f59="" class="form-actions">
          <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-project-folder-setup"> Edit project folders</nc-button-stub>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > on save: enabled project folder > upon failure > should set the group already exists error message and error details when group already exists 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <nc-note-card-stub data-v-67bc9f59="" showalert="false" type="error" class="note-card">
      <p data-v-67bc9f59="" class="note-card--title"><b data-v-67bc9f59="">The group "OpenProject" already exists</b></p>
      <p data-v-67bc9f59="" class="note-card--error-description">Setting up the OpenProject user, group and team folder was not possible. Please check this {htmlLink} on how to resolve this situation.</p><!-- eslint-disable-line vue/no-v-html -->
    </nc-note-card-stub>
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-form">
        <nc-checkbox-radio-switch-stub data-v-67bc9f59="" id="__ID__" aria-label="" type="switch" buttonvariant="false" buttonvariantgrouped="no" modelvalue="true" disabled="false" indeterminate="false" required="false" loading="false" class=""><b data-v-67bc9f59="">Automatically managed folders</b></nc-checkbox-radio-switch-stub>
        <div data-v-67bc9f59="">
          <p data-v-67bc9f59="" class="project-folder-description">Let OpenProject create folders per project automatically. It will ensure that every team member has always the correct access permissions.</p><br data-v-67bc9f59=""><b data-v-67bc9f59="">OpenProject user, group and folder</b>
          <p data-v-67bc9f59="" class="project-folder-description">For automatically managing project folders, this app needs to setup a special team folder, assigned to a group and managed by a user, each called "OpenProject". <br data-v-67bc9f59=""> The app will never delete files or folders, even if you deactivate this later.</p>
          <div data-v-67bc9f59="" class="form-actions">
            <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="complete-with-project-folders-form-btn"> Retry setup OpenProject user, group and folder</nc-button-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > on save: enabled project folder > upon failure > should set the team folder name already exists error message and error details when team folder already exists 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <nc-note-card-stub data-v-67bc9f59="" showalert="false" type="error" class="note-card">
      <p data-v-67bc9f59="" class="note-card--title"><b data-v-67bc9f59="">The team folder name "OpenProject" already exists</b></p>
      <p data-v-67bc9f59="" class="note-card--error-description">Setting up the OpenProject user, group and team folder was not possible. Please check this {htmlLink} on how to resolve this situation.</p><!-- eslint-disable-line vue/no-v-html -->
    </nc-note-card-stub>
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-form">
        <nc-checkbox-radio-switch-stub data-v-67bc9f59="" id="__ID__" aria-label="" type="switch" buttonvariant="false" buttonvariantgrouped="no" modelvalue="true" disabled="false" indeterminate="false" required="false" loading="false" class=""><b data-v-67bc9f59="">Automatically managed folders</b></nc-checkbox-radio-switch-stub>
        <div data-v-67bc9f59="">
          <p data-v-67bc9f59="" class="project-folder-description">Let OpenProject create folders per project automatically. It will ensure that every team member has always the correct access permissions.</p><br data-v-67bc9f59=""><b data-v-67bc9f59="">OpenProject user, group and folder</b>
          <p data-v-67bc9f59="" class="project-folder-description">For automatically managing project folders, this app needs to setup a special team folder, assigned to a group and managed by a user, each called "OpenProject". <br data-v-67bc9f59=""> The app will never delete files or folders, even if you deactivate this later.</p>
          <div data-v-67bc9f59="" class="form-actions">
            <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="complete-with-project-folders-form-btn"> Retry setup OpenProject user, group and folder</nc-button-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > on save: enabled project folder > upon failure > should set the user already exists error message and error details when user already exists 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <nc-note-card-stub data-v-67bc9f59="" showalert="false" type="error" class="note-card">
      <p data-v-67bc9f59="" class="note-card--title"><b data-v-67bc9f59="">The user "OpenProject" already exists</b></p>
      <p data-v-67bc9f59="" class="note-card--error-description">Setting up the OpenProject user, group and team folder was not possible. Please check this {htmlLink} on how to resolve this situation.</p><!-- eslint-disable-line vue/no-v-html -->
    </nc-note-card-stub>
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-form">
        <nc-checkbox-radio-switch-stub data-v-67bc9f59="" id="__ID__" aria-label="" type="switch" buttonvariant="false" buttonvariantgrouped="no" modelvalue="true" disabled="false" indeterminate="false" required="false" loading="false" class=""><b data-v-67bc9f59="">Automatically managed folders</b></nc-checkbox-radio-switch-stub>
        <div data-v-67bc9f59="">
          <p data-v-67bc9f59="" class="project-folder-description">Let OpenProject create folders per project automatically. It will ensure that every team member has always the correct access permissions.</p><br data-v-67bc9f59=""><b data-v-67bc9f59="">OpenProject user, group and folder</b>
          <p data-v-67bc9f59="" class="project-folder-description">For automatically managing project folders, this app needs to setup a special team folder, assigned to a group and managed by a user, each called "OpenProject". <br data-v-67bc9f59=""> The app will never delete files or folders, even if you deactivate this later.</p>
          <div data-v-67bc9f59="" class="form-actions">
            <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="complete-with-project-folders-form-btn"> Retry setup OpenProject user, group and folder</nc-button-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > on save: enabled project folder > upon success > should set app password form to view mode on "Done" action 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false" iscomplete="true"></form-heading-stub>
    <!--v-if-->
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-status">
        <div data-v-67bc9f59="" class="project-folder-status-value"><b data-v-67bc9f59="">Automatically managed folders:</b> Active</div>
        <div data-v-67bc9f59="" class="form-actions">
          <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-project-folder-setup"> Edit project folders</nc-button-stub>
        </div>
      </div>
    </div>
  </div>
  <div data-v-67bc9f59="" class="app-password-form-container">
    <form-heading-stub data-v-67bc9f59="" index="6" title="Project folders application connection" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <field-value-stub data-v-67bc9f59="" title="Application Password" hidevalue="true" isrequired="true" encryptvalue="false" withinspection="true" value=""></field-value-stub>
    <div data-v-67bc9f59="" class="form-actions">
      <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="reset-user-app-password"> Replace application password</nc-button-stub>
    </div>
  </div>
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > on save: enabled project folder > upon success > should set status as "Active" 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false" iscomplete="true"></form-heading-stub>
    <!--v-if-->
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-status">
        <div data-v-67bc9f59="" class="project-folder-status-value"><b data-v-67bc9f59="">Automatically managed folders:</b> Active</div>
        <div data-v-67bc9f59="" class="form-actions">
          <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-project-folder-setup"> Edit project folders</nc-button-stub>
        </div>
      </div>
    </div>
  </div>
  <div data-v-67bc9f59="" class="app-password-form-container">
    <form-heading-stub data-v-67bc9f59="" index="6" title="Project folders application connection" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <text-input-stub data-v-67bc9f59="" label="Application Password" modelvalue="12345678" type="text" placeholder="" hinttext="This value will only be accessible once. Now, as an administrator copy this password to OpenProject {htmlLink}." isrequired="true" withcopybtn="true" readonly="true" disabled="false" id="__ID__" class="py-1"></text-input-stub>
    <div data-v-67bc9f59="" class="form-actions">
      <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="submit-op-system-password-form-btn"> Done, complete setup</nc-button-stub>
    </div>
  </div>
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > teamfolders app error > should not show error message if project folder is disabled 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <!--v-if-->
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-form">
        <nc-checkbox-radio-switch-stub data-v-67bc9f59="" id="__ID__" aria-label="" type="switch" buttonvariant="false" buttonvariantgrouped="no" modelvalue="false" disabled="false" indeterminate="false" required="false" loading="false" class=""><b data-v-67bc9f59="">Automatically managed folders</b></nc-checkbox-radio-switch-stub>
        <div data-v-67bc9f59="" class="complete-without-groupfolders">
          <p data-v-67bc9f59="" class="project-folder-description">We recommend using this functionality but it is not mandatory. Please activate it in case you want to use the automatic creation and management of project folders.</p>
          <div data-v-67bc9f59="" class="form-actions">
            <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="complete-without-project-folder-form-btn"> Complete without project folders</nc-button-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > edit mode  > fresh setup > teamfolders app error > should show error message if project folder is enabled 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <error-note-stub data-v-67bc9f59="" errortitle="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." errormessage="" errorlink="//index.php/settings/apps/files/groupfolders" errorlinklabel="Install latest version now"></error-note-stub>
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-form">
        <nc-checkbox-radio-switch-stub data-v-67bc9f59="" id="__ID__" aria-label="" type="switch" buttonvariant="false" buttonvariantgrouped="no" modelvalue="true" disabled="false" indeterminate="false" required="false" loading="false" class=""><b data-v-67bc9f59="">Automatically managed folders</b></nc-checkbox-radio-switch-stub>
        <div data-v-67bc9f59="">
          <p data-v-67bc9f59="" class="project-folder-description">Let OpenProject create folders per project automatically. It will ensure that every team member has always the correct access permissions.</p><br data-v-67bc9f59=""><b data-v-67bc9f59="">OpenProject user, group and folder</b>
          <p data-v-67bc9f59="" class="project-folder-description">For automatically managing project folders, this app needs to setup a special team folder, assigned to a group and managed by a user, each called "OpenProject". <br data-v-67bc9f59=""> The app will never delete files or folders, even if you deactivate this later.</p>
          <div data-v-67bc9f59="" class="form-actions">
            <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="true" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="complete-with-project-folders-form-btn"> Setup OpenProject user, group and folder</nc-button-stub>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > view mode > project folder setup status > should show active if the project folder is enabled 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <!--v-if-->
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-status">
        <div data-v-67bc9f59="" class="project-folder-status-value"><b data-v-67bc9f59="">Automatically managed folders:</b> Active</div>
        <div data-v-67bc9f59="" class="form-actions">
          <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-project-folder-setup"> Edit project folders</nc-button-stub>
        </div>
      </div>
    </div>
  </div>
  <div data-v-67bc9f59="" class="app-password-form-container">
    <form-heading-stub data-v-67bc9f59="" index="6" title="Project folders application connection" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <field-value-stub data-v-67bc9f59="" title="Application Password" hidevalue="true" isrequired="true" encryptvalue="false" withinspection="true" value=""></field-value-stub>
    <div data-v-67bc9f59="" class="form-actions">
      <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="reset-user-app-password"> Replace application password</nc-button-stub>
    </div>
  </div>
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > view mode > project folder setup status > should show inactive if the project folder is disabled 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="true" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <!--v-if-->
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-status">
        <div data-v-67bc9f59="" class="project-folder-status-value"><b data-v-67bc9f59="">Automatically managed folders:</b> Inactive</div>
        <div data-v-67bc9f59="" class="form-actions">
          <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-project-folder-setup"> Edit project folders</nc-button-stub>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > view mode > teamfolders app error > should not show error message if project folder is disabled 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="true" isprojectfoldersetupheading="true" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <!--v-if-->
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-status">
        <div data-v-67bc9f59="" class="project-folder-status-value"><b data-v-67bc9f59="">Automatically managed folders:</b> Inactive</div>
        <div data-v-67bc9f59="" class="form-actions">
          <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-project-folder-setup"> Edit project folders</nc-button-stub>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Component: FormProjectFolder > Project folder setup > view mode > teamfolders app error > should show error message if project folder is enabled 1`] = `
"<section data-v-67bc9f59="">
  <div data-v-67bc9f59="" class="project-folder-setup">
    <form-heading-stub data-v-67bc9f59="" index="5" title="Project folders (recommended)" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="true" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <error-note-stub data-v-67bc9f59="" errortitle="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." errormessage="" errorlink="//index.php/settings/apps/files/groupfolders" errorlinklabel="Install latest version now"></error-note-stub>
    <div data-v-67bc9f59="" class="project-folder-form-container">
      <div data-v-67bc9f59="" class="project-folder-status">
        <div data-v-67bc9f59="" class="project-folder-status-value"><b data-v-67bc9f59="">Automatically managed folders:</b> Active</div>
        <div data-v-67bc9f59="" class="form-actions">
          <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-project-folder-setup"> Edit project folders</nc-button-stub>
        </div>
      </div>
    </div>
  </div>
  <div data-v-67bc9f59="" class="app-password-form-container">
    <form-heading-stub data-v-67bc9f59="" index="6" title="Project folders application connection" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
    <field-value-stub data-v-67bc9f59="" title="Application Password" hidevalue="true" isrequired="true" encryptvalue="false" withinspection="true" value=""></field-value-stub>
    <div data-v-67bc9f59="" class="form-actions">
      <nc-button-stub data-v-67bc9f59="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="reset-user-app-password"> Replace application password</nc-button-stub>
    </div>
  </div>
</section>"
`;
